[package]
name = "mp4converter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
thiserror = "2.0.10"
serde_json = "1.0.135"
indicatif = "0.17.9"
humansize = "2.1.3"
tempfile = "3.15.0"
colored = "3.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }