[package]
name = "mp4converter"
version = "0.2.0"
edition = "2021"
authors = ["Noah Gift <noah.gift@gmail.com>"]
description = "Professional video compliance system for content delivery standards with PCM audio support"
repository = "https://github.com/paiml/mp4convertor"
license = "MIT"
readme = "README.md"
keywords = ["video", "ffmpeg", "compliance", "h264", "pcm"]
categories = ["multimedia::video", "multimedia::encoding", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
thiserror = "2.0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
indicatif = "0.17.9"
humansize = "2.1.3"
tempfile = "3.15.0"
colored = "3.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Google Drive API integration  
google-drive3 = "6.0.0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
hyper-rustls = "0.27"
http-body-util = "0.1"
bytes = "1.0"